--- a/src/app/components/novedades/novedades.component.html
+++ b/src/app/components/novedades/novedades.component.html
@@ -95,15 +95,14 @@
                           </div>
 
                           <div class="content">
-
+                            <div class="columns is-mobile is-centered" style="margin-top: 20px">
                             <div class="card">
                               <div class="card-image">
-                                <div class="preview" *ngIf="preview && preview !== null">
-                                  <figure class="image is-4by5">
-                                    <img [src]="preview">
-                                  </figure>
+                                <div class="preview" *ngIf="preview && preview !== null">                         
+                                    <img class="is-centered" [src]="preview" width="200" height="100" style="max-height: 100px; max-width: 200px">
                                 </div>
                               </div>
+                            </div>
                             </div>
                           </div>
                        
@@ -177,15 +176,14 @@
                           </div>
 
                           <div class="content">
-
+                            <div class="columns is-mobile is-centered" style="margin-top: 20px">
                             <div class="card">
                               <div class="card-image">
-                                <div class="preview" *ngIf="preview && preview !== null">
-                                  <figure class="image is-4by5">
-                                    <img [src]="preview">
-                                  </figure>
+                                <div class="preview" *ngIf="preview && preview !== null">                         
+                                    <img class="is-centered" [src]="preview" width="200" height="100" style="max-height: 100px; max-width: 200px">
                                 </div>
                               </div>
+                            </div>
                             </div>
                           </div>
                           
