--- a/src/app/components/usuarios/usuarios.component.html
+++ b/src/app/components/usuarios/usuarios.component.html
@@ -215,21 +215,15 @@
                           </div>
 
                           <div class="content">
-
+                            <div class="columns is-mobile is-centered" style="margin-top: 20px">
                             <div class="card">
                               <div class="card-image">
-                                <div class="preview" *ngIf="preview && preview !== null">
-                                  <figure class="image is-4by5">
-                                    <img [src]="preview">
-                                  </figure>
+                                <div class="preview" *ngIf="preview && preview !== null">                         
+                                    <img class="is-centered" [src]="preview" width="200" height="100" style="max-height: 100px; max-width: 200px">
                                 </div>
                               </div>
                             </div>
-
-
-                            <div class="file is-centered" style="margin-top: 10px;">
-                              
-                            </div> 
+                            </div>
                           </div>
                           
                           <hr>
@@ -417,15 +411,14 @@
                           </div>
 
                           <div class="content">
-
+                            <div class="columns is-mobile is-centered" style="margin-top: 20px">
                             <div class="card">
                               <div class="card-image">
-                                <div class="preview" *ngIf="preview && preview !== null">
-                                  <figure class="image is-4by5">
-                                    <img [src]="preview">
-                                  </figure>
+                                <div class="preview" *ngIf="preview && preview !== null">                         
+                                    <img class="is-centered" [src]="preview" width="200" height="100" style="max-height: 100px; max-width: 200px">
                                 </div>
                               </div>
+                            </div>
                             </div>
                           </div>
                           
