--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,98 +1,60 @@
 <body>
-    <nav class="navbar is-black" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="https://bulma.io">
-            <img src="../../../assets/img/logo-kimirina.png" width="112" height="28">
-          </a>
-      
-          <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-        </div>
-      
-        <div id="navbarBasicExample" class="navbar-menu">
-          <div class="navbar-start">
-            <a class="navbar-item">
-              Home
-            </a>
-          </div>
-      
-          <div class="navbar-end">
-            <div class="navbar-item">
-              <div class="buttons">
-                <a class="button is-info" [routerLink]="['/register']">
-                  <strong>Registrate</strong>
-                </a>
-                <a class="button is-dark" [routerLink]="['/login']">
-                  Inicia Sesión
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </nav>
-    <section class="container">
-      <div class="columns is-multiline">
-        <div class="column is-8 is-offset-2 register">
-          <div class="columns">
-            <div class="column left">
-              <h1 class="title is-1">Kimirina App</h1>
-              <h2 class="subtitle colored is-4">Lorem ipsum dolor sit amet.</h2>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis ex deleniti aliquam tempora libero excepturi vero soluta odio optio sed.</p>
-            </div>
-            <div class="column right has-text-centered">
-              <h1 class="title is-4">Crea tu cuenta</h1>
-              <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
-              <form>
-                <div class="field">
-                  <div class="control">
-                    <input class="input is-medium" type="text" placeholder="Name">
-                  </div>
-                </div>
 
-                <div class="field">
-                  <div class="control">
-                    <input class="input is-medium" type="email" placeholder="Email">
-                  </div>
-                </div>
-                <button class="button is-block is-info is-fullwidth is-medium">Submit</button>
-                <br />
-                <small><em>Lorem ipsum dolor sit amet consectetur.</em></small>
-              </form>
-            </div>
+  <nav>
+    <div class="nav-wrapper">
+      <a [routerLink]="['/kimirina']" class="brand-logo">Kimirina App</a>
+      <a href="" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a [routerLink]="['/kimirina']">Inicio</a></li>
+        <li><a href="#">Quienes somos?</a></li>
+        <li><a [routerLink]="['/register']">Registrate</a></li>
+        <li><a [routerLink]="['/login']" style="margin-right: 5px;">Inicia Sesión</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <ul class="sidenav" id="mobile-demo">
+    <li><a [routerLink]="['/kimirina']">Inicio</a></li>
+    <li><a href="#">Quienes somos?</a></li>
+    <li><a [routerLink]="['/register']">Registrate</a></li>
+    <li><a [routerLink]="['/login']">Inicia Sesión</a></li>
+  </ul>
+    
+  <section>
+    <div class="hero-body">
+      <div class="column is-8 is-offset-2 register">
+        <div class="columns">
+          <div class="column left">
+            <h1 class="title is-1">Kimirina App</h1>
+            <h2 class="subtitle colored is-4">Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis ex deleniti aliquam tempora libero excepturi vero soluta odio optio sed.</p>
           </div>
-        </div>
-        <div class="column is-8 is-offset-2">
-          <br>
-          <nav class="level">
-            <div class="level-left">
-              <div class="level-item">
-                <span class="icon">
-                  <i class="fab fa-twitter"></i>
-                </span> &emsp;
-                <span class="icon">
-                  <i class="fab fa-facebook"></i>
-                </span> &emsp;
-                <span class="icon">
-                  <i class="fab fa-instagram"></i>
-                </span> &emsp;
-                <span class="icon">
-                  <i class="fab fa-github"></i>
-                </span> &emsp;
-                <span class="icon">
-                  <i class="fas fa-envelope"></i>
-                </span>
+          <div class="column right has-text-centered">
+            <h1 class="title is-4">Crea tu cuenta</h1>
+            <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
+            <form>
+              <div class="field">
+                <div class="control">
+                  <input class="input is-medium" type="text" placeholder="Name">
+                </div>
               </div>
-            </div>
-            <div class="level-right">
-              <small class="level-item" style="color: var(--textLight)">
-                &copy; Kimirina App. Todos los derechos reservados.
-              </small>
-            </div>
-          </nav>
+
+              <div class="field">
+                <div class="control">
+                  <input class="input is-medium" type="email" placeholder="Email">
+                </div>
+              </div>
+              <button class="button is-block is-info is-fullwidth is-medium">Submit</button>
+              <br />
+              <small><em>Lorem ipsum dolor sit amet consectetur.</em></small>
+            </form>
+          </div>
         </div>
       </div>
-    </section>
-  </body>
+    </div>
+  </section>
+
+
+</body>
+
+<app-footer></app-footer>
